--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="links/css/style.css">
     <title>Life. by Tyler</title>
 </head>
 <body>
@@ -25,10 +25,10 @@
                             <li class="menu-item">
                                 <a href="page/portfolio.html">portfolio</a>
                             </li>
-                            <li class="menu-item">
+                            <!-- <li class="menu-item">
                                 <a href="page/blog.html">blog</a>
-                            </li>
-                            <li class="menu-item"><a>social</a>
+                            </li> -->
+                            <!-- <li class="menu-item"><a>social</a> -->
                                 <!-- <ul class="social">
                                     <li class="email">
                                         <span id="email-tooltip" tooltip="Click to copy my email address to your clipboard">
@@ -45,34 +45,44 @@
                                         <a href="https://www.facebook.com/tyler.ward.98" title="Join me on Facebook" target="_blank">facebook</a>
                                     </li>
                                 </ul> -->
-                            </li>
-                            <li class="menu-item">
+                            <!-- </li> -->
+                            <!-- <li class="menu-item">
                                 <a href="#header-search-wrap" id="search-button" aria-controls="header-search-wrap" aria-expanded="false" role="button" class="toggle-header-search">
                                     <span class="screen-reader-text">Show Search</span>
                                     <ion-icon name="search"></ion-icon>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
-                    <div id="header-search-wrap" class="header-search-wrap">
-                        <form class="search-form" itemprop="potentialAction" itemscope>
+                    <!-- <div id="header-search-wrap" class="header-search-wrap">
+                        <label class="search-form" itemprop="potentialAction" itemscope>
                             <meta itemprop="target">
                             <label class="search-form-label screen-reader-text">Search Life. by Tyler (e.g. Austrian Economics)</label>
                             <input type="submit" value="search">
-                        </form>
-                    </div>
+                        </label>
+                    </div> -->
                 </nav>
             </div>
         </header>
         <div id="main-container">
-            <div id="content-wrap" class="wrap">
-                <main id="content">
+            <div id="about-section" class="wrap">
+                <img src='links/img/ProfileImageFinal.jpg' id='self-photo'>
+                <div id="about-text">
+                    <h1>Who am I?</h1>
+                    <p>
+                        Hi!  I am Tyler.  I am an eager and motivated sprouting Software Engineer, 
+                        seeking to develop my skills anyway that I can.  My interests outside of 
+                        development include economics, history, investing and all aspects of technology.
+                    </p>
+                </div>
+            </div>
+            <div id="projects">
 
-                </main>
             </div>
         </div>
     </div>
-    <script src="https://unpkg.com/ionicons@4.4.6/dist/ionicons.js"></script>
-    <script src="src/js/global.js"></script>
+    <script src="links/js/projects.js"></script>
+    <script src="links/js/ProjectCell.js"></script>
+    <script src="links/js/ProjectsGrid.js"></script>
 </body>
 </html>
