sets structure of project grid up

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
                     <div class="wrap">
                         <ul id="nav">
                             <li class="menu-item">
-                                <a href="page/about.html">about</a>
+                                <a href="#main-container">about</a>
                             </li>
                             <li class="menu-item">
-                                <a href="page/portfolio.html">portfolio</a>
+                                <a href="#experience-section">experience</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#portfolio-section">portfolio</a>
                             </li>
                             <!-- <li class="menu-item">
                                 <a href="page/blog.html">blog</a>
@@ -72,12 +75,13 @@
                     <p>
                         Hi!  I am Tyler.  I am an eager and motivated sprouting Software Engineer, 
                         seeking to develop my skills anyway that I can.  My interests outside of 
-                        development include economics, history, investing and all aspects of technology.
+                        development include economics, history, investing, the outdoors and all 
+                        aspects of technology.
                     </p>
                 </div>
             </div>
             <div id="projects">
-
+                <h1>Projects</h1>
             </div>
         </div>
     </div>
