--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div id="site-container">
         <header id="header">
             <div class="wrap">
-                <div class="title">
-                    <h1 class="site-title">
+                <div id="title">
+                    <h1 id="site-title">
                         <a id="logo" class="logo" href="http://www.lifebytyler.com/">Life. by Tyler</a>
                     </h1>
                 </div>
-                <nav class="nav-primary">
+                <nav id="nav-primary">
                     <div class="wrap">
                         <ul id="nav">
                             <li class="menu-item">
@@ -26,60 +26,28 @@
                                 <a href="#experience-section">experience</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#portfolio-section">portfolio</a>
+                                <a href="#projects">projects</a>
                             </li>
-                            <!-- <li class="menu-item">
-                                <a href="page/blog.html">blog</a>
-                            </li> -->
-                            <!-- <li class="menu-item"><a>social</a> -->
-                                <!-- <ul class="social">
-                                    <li class="email">
-                                        <span id="email-tooltip" tooltip="Click to copy my email address to your clipboard">
-                                            <a id="email" data-clipboard-text="tymitchell2100@gmail.com">emial</a>
-                                        </span>
-                                    </li>
-                                    <li class="twitter">
-                                        <a href="https://twitter.com/JewishYoda" title="Follow me on Twitter" target="_blank">twitter</a>
-                                    </li>
-                                    <li class="linkedin">
-                                        <a href="https://www.linkedin.com/in/tyler-ward-09928a113/" title="Connect on Linkedin" target="_blank">linkedin</a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.facebook.com/tyler.ward.98" title="Join me on Facebook" target="_blank">facebook</a>
-                                    </li>
-                                </ul> -->
-                            <!-- </li> -->
-                            <!-- <li class="menu-item">
-                                <a href="#header-search-wrap" id="search-button" aria-controls="header-search-wrap" aria-expanded="false" role="button" class="toggle-header-search">
-                                    <span class="screen-reader-text">Show Search</span>
-                                    <ion-icon name="search"></ion-icon>
-                                </a>
-                            </li> -->
                         </ul>
                     </div>
-                    <!-- <div id="header-search-wrap" class="header-search-wrap">
-                        <label class="search-form" itemprop="potentialAction" itemscope>
-                            <meta itemprop="target">
-                            <label class="search-form-label screen-reader-text">Search Life. by Tyler (e.g. Austrian Economics)</label>
-                            <input type="submit" value="search">
-                        </label>
-                    </div> -->
                 </nav>
             </div>
         </header>
+        <div class='divider'></div>
         <div id="main-container">
             <div id="about-section" class="wrap">
                 <img src='links/img/ProfileImageFinal.jpg' id='self-photo'>
                 <div id="about-text">
                     <h1>Who am I?</h1>
                     <p>
-                        Hi!  I am Tyler.  I am an eager and motivated sprouting Software Engineer, 
+                        Hi!  I am an eager and motivated sprouting Software Engineer, 
                         seeking to develop my skills anyway that I can.  My interests outside of 
                         development include economics, history, investing, the outdoors and all 
                         aspects of technology.
                     </p>
                 </div>
             </div>
+            <div class='divider'></div>
             <div id="projects">
                 <h1>Projects</h1>
             </div>
