--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </p>
                 </div>
             </div>
-            <div class='divider'></div>
+            <div id="project-anchor" class='divider'></div>
             <div id="projects">
                 <h1>Projects</h1>
             </div>
