adds html for contact form (primitive)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="links/css/style.css">
     <title>Life. by Tyler</title>
 </head>
+
 <body>
     <div id="site-container">
         <header id="header">
@@ -26,7 +28,10 @@
                                 <a href="#experience-section">experience</a>
                             </li>
                             <li class="menu-item">
-                                <a href="#projects">projects</a>
+                                <a href="#project-anchor">projects</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#contact">contact</a>
                             </li>
                         </ul>
                     </div>
@@ -38,11 +43,11 @@
             <div id="about-section" class="wrap">
                 <img src='links/img/ProfileImageFinal.jpg' id='self-photo'>
                 <div id="about-text">
-                    <h1>Who am I?</h1>
+                    <h1>A little about me</h1>
                     <p>
-                        Hi!  I am an eager and motivated sprouting Software Engineer, 
-                        seeking to develop my skills anyway that I can.  My interests outside of 
-                        development include economics, history, investing, the outdoors and all 
+                        Hi! I am an eager and motivated sprouting Software Engineer,
+                        seeking to develop my skills anyway that I can. My interests outside of
+                        development include economics, history, investing, the outdoors and all
                         aspects of technology.
                     </p>
                 </div>
@@ -51,10 +56,28 @@
             <div id="projects">
                 <h1>Projects</h1>
             </div>
+            <div class='divider'></div>
+            <div id='contact'>
+                <h1>Contact Me</h1>
+                <form class="cf">
+                    <div id='contact-input'>
+                        <div class="half left cf">
+                            <input type="text" id="input-name" placeholder="Name">
+                            <input type="email" id="input-email" placeholder="Email address">
+                            <input type="text" id="input-subject" placeholder="Subject">
+                        </div>
+                        <div class="half right cf">
+                            <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
+                        </div>
+                    </div>
+                    <input type="submit" value="Submit" id="input-submit">
+                </form>
+            </div>
         </div>
     </div>
     <script src="links/js/projects.js"></script>
     <script src="links/js/ProjectCell.js"></script>
     <script src="links/js/ProjectsGrid.js"></script>
 </body>
+
 </html>
